- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    5.13.0 Beta2
- 
        
- 
        ac68ef1efc27669e9c8fc255298345d72d198d68 (5.13.0) 825b474363167cfd91509e15b8846e11b8560dac (5.13.1)
In Qt 5.12.2,  font fallback was working correctly for Courier, but it's not working in Qt 5.13 beta1 nor beta2 
The Courier font is falling back to MS FixedSys instead of Courier New and getting following warning with 5.13.0
DirectWrite: CreateFontFaceFromHDC() failed (Indicates an error in an input file such as a font file.) for QFontDef(Family="Courier,monospace,Courier", pointsize=16, pixelsize=20, styleHint=5, weight=50, stretch=100, hintingPreference=0) LOGFONT("Courier,monospace,Courier", lfWidth=0, lfHeight=-20) dpi=240
See the attached example and snapshots for 5.12.2 and 5.13.0
- is duplicated by
- 
                    QTBUG-74653 Font fallback in QTextBrowser not working -         
- Closed
 
-         
- relates to
- 
                    QTBUG-46322 When setting a family name that has a comma in the name it will not match the font correctly -         
- Closed
 
-         
- mentioned in
- 
                    Page Loading... 

